namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
---
kind: Namespace
apiVersion: v1
metadata:
  name: aws-observability
  labels:
    aws-observability: enabled
