blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: blue
        image: 790946953677.dkr.ecr.ap-northeast-2.amazonaws.com/blue:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: blue
  namespace: app
spec:
  selector:
    app: blue
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
