green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      labels:
        app: green
    spec:
      priorityClassName: blue-green-priority
      terminationGracePeriodSeconds: 60
      containers:
      - name: green
        image: 790946953677.dkr.ecr.ap-northeast-2.amazonaws.com/green
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: green
  namespace: app
spec:
  selector:
    app: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
